--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -20,14 +20,7 @@
     width: 80%;
     display: flex;
     flex-direction: column;
-    align-items:center
-}
-
-.close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+    align-items: center
 }
 
 .close:hover,
@@ -35,4 +28,29 @@
     color: #000;
     text-decoration: none;
     cursor: pointer;
+}
+
+.close {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 110px;
+    right: 110px;
+    z-index: 11;
+}
+
+.modal__close-line {
+    display: block;
+    height: 2px;
+    width: 100%;
+    background-color: black;
+    position: absolute;
+    top: 50%;
+}
+
+.modal__close-line:first-child {
+    transform: translateY(-50%) rotate(45deg);
+}
+.modal__close-line:last-child {
+    transform: translateY(-50%) rotate(-45deg);
 }
