layout app-page

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,25 +1,26 @@
 @import "styles/var";
 @import "styles/start";
 @import "styles/header";
-
+@import "styles/app";
 body {
-  background: var(--var-back-blue);
+    background: var(--var-back-blue);
 }
+
 .wrapper {
-  max-width: 1300px;
-  margin: 0 auto;
-  padding: 1%;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+    max-width: 1300px;
+    margin: 0 auto;
+    padding: 1%;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
+
 .block {
-  display: block;
+    display: block;
 }
+
 .flex {
-  display: flex;
-  justify-content: space-between;
-  gap: 1%;
+    display: flex;
+    justify-content: space-between;
+    gap: 1%;
 }
-
-
