--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,56 +1,99 @@
 .header_logo {
-  width: 200px;
-  height: 100px;
-  background: url(./assets/cute_cow.svg) no-repeat;
-  cursor: pointer;
-  transition: all 0.7s;
-  &:hover,
-  &:active {
-  background: url(./assets/cute_cow_hover.svg) no-repeat;
-  }
+    width: 200px;
+    height: 100px;
+    background: url(./assets/cute_cow.svg) no-repeat;
+    cursor: pointer;
+    transition: all 0.7s;
+    &:hover,
+    &:active {
+        background: url(./assets/cute_cow_hover.svg) no-repeat;
+    }
 }
 
 .header-wrapper {
-  display: flex;
-  justify-content: space-between;
-  gap: 1%;
+    display: flex;
+    justify-content: space-between;
+    gap: 1%;
 }
 
 .navigation {
-  width: 80%;
+    width: 80%;
 }
 
 .navigation-list {
-  display: flex;
-  justify-content: space-around;
-  list-style-type: none;
-  gap: 2%;
-  @media (max-width: 520px) {
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
+    display: flex;
+    justify-content: space-around;
+    list-style-type: none;
+    gap: 2%;
+    @media (max-width: 520px) {
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
 }
 
 a {
-  text-decoration: none;
-  color: var(--var-black);
-  font-size: var(--var-font-middle);
-  transition: all 0.6s;
-  &:hover, &:active {
-    color: var(--var-white);
-    text-decoration: underline;
+    text-decoration: none;
+    color: var(--var-black);
+    font-size: var(--var-font-middle);
     transition: all 0.6s;
-  }
+    &:hover,
+    &:active {
+        color: var(--var-white);
+        text-decoration: underline;
+        transition: all 0.6s;
+    }
 }
-.header__title {
-  margin-left: 100px;
-  padding: 3%;
-  color: var(--var-white);
-  letter-spacing: 0.3px;
-    &:hover, &:active {
-    color: var(--var-links);
-    transition: all 0.6s;
-    text-decoration: underline;
-  }
 
+.header-container {
+    background: var(--var-back-blue);
+}
+
+.header-wrapper {
+    margin: 10px 20px;
+}
+
+.header__title {
+    margin-left: 100px;
+    padding: 3%;
+    color: var(--var-white);
+    letter-spacing: 0.3px;
+    &:hover,
+    &:active {
+        color: var(--var-links);
+        transition: all 0.6s;
+        text-decoration: underline;
+    }
+}
+
+.header__menu {
+    width: 30px;
+    height: 30px;
+    background: url(./assets/burger.svg) no-repeat;
+    cursor: pointer;
+    transition: all 0.7s;
+}
+
+.header__setings {
+    width: 30px;
+    height: 30px;
+    background: url(./assets/setings.svg) no-repeat;
+    cursor: pointer;
+    transition: all 0.7s;
+}
+
+.header__input {
+    position: relative;
+    width: 20%;
+    background: rgba(255, 255, 255, 0.7);
+    border-radius: 6px;
+    border: 1px solid #cccccc;
+    outline: none;
+    margin-left: -450px;
+    &::before {
+        content: '';
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        background-image: url(./assets/search.svg) no-repeat;
+    }
 }
