--- a/src/styles/_start.scss
+++ b/src/styles/_start.scss
@@ -1,112 +1,133 @@
 body {
-  height: 100%;
-  &.lock {
-    overflow: hidden;
-  }
+    height: 100%;
+    margin: 0;
+    &.lock {
+        overflow: hidden;
+    }
 }
 
 .btn {
-  background-color: var(--var-links);
-  color: var(--var-white);
-  border: 1px solid var(--var-links);
-  border-radius: 2px;
-  padding: 10px 70px;
-  font-size: var(--var-font-small);
-  transition: all 0.7s;
-  cursor: pointer;
-  &:hover,
-  &:active {
-    background-color: #FFD700;
-      transition: all 0.7s;
-      color: var(--var-black);
-  }
-}
-.start__btn {
-  margin-bottom: 1%;
-}
-.main-page {
-  margin: 0 auto;
-  padding: 1%;
-  display: flex;
-  flex-direction: column;
-  min-height: 95vh;
-}
-.start {
-  display: flex;
-  flex-direction: column;
-  padding: 1%;
-  justify-content: center;
-  align-items: center;
-  height: 70vh;
-  &__header {
+    background-color: var(--var-links);
     color: var(--var-white);
-  }
-}
-.slider {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 95%;
-  width: 95%;
-  overflow: hidden;
-  &__image{
-flex: 0 1 100%;
-margin-bottom: 1%;
-
-  }
-    &__img{
-    width: 100%;
-    height: 100%;
+    border: 1px solid var(--var-links);
+    border-radius: 2px;
+    padding: 10px 70px;
+    font-size: var(--var-font-small);
     transition: all 0.7s;
-    animation: 10s infinite alternate slidein;
-      }
-  &__btns {
-    text-align: center;
-  }
-}
-.slider__one {
-  background: url(./assets/one.png) 50%/contain no-repeat;
-}
-.slider__two {
-  background: url(./assets/two.png) 50%/contain no-repeat;
-}
-.slider__three {
-  background: url(./assets/three.png) 50%/contain no-repeat;
-}
-.slider__four {
-  background: url(./assets/four.png) 50%/contain no-repeat;
-}
-@keyframes slidein {
-  from {
-    transform: translateX(-20%);
-  }
-
-  to {
-    transform: translateX(20%);
-  }
-}
-.footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 1%;
-  margin-top: auto;
-  color: var(--var-links);
-  transition: all 0.7s;
-  &__link {
-    color: var(--var-links);
-    transition: all 0.7s;
-  }
-  &__rss {
-    width: 90px;
-  }
-  &__rss-img {
-    max-width: 100%;
-    transition: all 0.7s;
+    cursor: pointer;
     &:hover,
     &:active {
-      transition: all 0.7s;
-      filter: brightness(0) saturate(100%) invert(100%) sepia(2%) saturate(639%) hue-rotate(208deg) brightness(115%) contrast(87%);
+        background-color: #FFD700;
+        transition: all 0.7s;
+        color: var(--var-black);
     }
-  }
+}
+
+.start__btn {
+    margin-bottom: 1%;
+}
+
+.main-page {
+    margin: 0 auto;
+    padding: 1%;
+    display: flex;
+    flex-direction: column;
+    min-height: 95vh;
+}
+
+.start {
+    display: flex;
+    flex-direction: column;
+    padding: 1%;
+    justify-content: center;
+    align-items: center;
+    height: 70vh;
+    &__header {
+        color: var(--var-white);
+    }
+}
+
+.slider {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 95%;
+    width: 95%;
+    overflow: hidden;
+    &__image {
+        flex: 0 1 100%;
+        margin-bottom: 1%;
+    }
+    &__img {
+        width: 100%;
+        height: 100%;
+        transition: all 0.7s;
+        animation: 10s infinite alternate slidein;
+    }
+    &__btns {
+        text-align: center;
+    }
+}
+
+.slider__one {
+    background: url(./assets/one.png) 50%/contain no-repeat;
+}
+
+.slider__two {
+    background: url(./assets/two.png) 50%/contain no-repeat;
+}
+
+.slider__three {
+    background: url(./assets/three.png) 50%/contain no-repeat;
+}
+
+.slider__four {
+    background: url(./assets/four.png) 50%/contain no-repeat;
+}
+
+@keyframes slidein {
+    from {
+        transform: translateX(-20%);
+    }
+    to {
+        transform: translateX(20%);
+    }
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1%;
+    margin-top: auto;
+    width: 100%;
+    height: 50px;
+    color: var(--var-links);
+    transition: all 0.7s;
+    background: var(--var-back-blue);
+    &__container {
+        width: 100%;
+        margin: 10px 25px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 1%;
+        // background: var(--var-back-blue);
+    }
+    &__link {
+        color: var(--var-links);
+        transition: all 0.7s;
+    }
+    &__rss {
+        width: 90px;
+    }
+    &__rss-img {
+        max-width: 100%;
+        transition: all 0.7s;
+        &:hover,
+        &:active {
+            transition: all 0.7s;
+            filter: brightness(0) saturate(100%) invert(100%) sepia(2%) saturate(639%) hue-rotate(208deg) brightness(115%) contrast(87%);
+        }
+    }
 }
