fix: change start-page styles

--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -1,3 +1,9 @@
+.application-page .header-container {
+  background: var(--var-back-blue);
+}
+.application-page .footer {
+  background: var(--var-back-blue);
+}
 .application-page {
     margin: 0;
     padding: 0;
