--- a/src/styles/_var.scss
+++ b/src/styles/_var.scss
@@ -1,8 +1,8 @@
 :root {
-    --var-back-blue: #4169E1;
-    --var-back-green: #32CD32;
-    --var-back-violet: #8A2BE2;
-    --var-back-aqua: #1E90FF;
+    --var-back-blue: #0060BF;
+    --var-back-green: #5BB84D;
+    --var-back-violet: #6A4CA6;
+    --var-back-aqua: #3292F2;
     --var-back-card: red;
     --var-links: #330066;
     --var-white: #eee;
