--- a/src/styles/_var.scss
+++ b/src/styles/_var.scss
@@ -1,5 +1,5 @@
 :root {
-    --var-back-blue: #4169E1;
+    --var-back-blue: #0060bf;
     --var-back-green: #32CD32;
     --var-back-violet: #8A2BE2;
     --var-back-aqua: #1E90FF;
