--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -25,28 +25,79 @@
     align-items: center;
     justify-content: space-around;
     border-radius: 10px;
+    height: 85vh;
 }
 
 .header-menu {
     width: 20%;
-    height: 85vh;
-    margin: 10px;
+    height: 100%;
+    margin-top: 2%;
+    margin-left: 20px;
 }
 
 .header-in-menu {
+    overflow: hidden;
+    height: 20px;
+    display: flex;
+    flex-direction: column;
     cursor: pointer;
+    position: relative;
+    transition: all 1s ease;
+}
+
+.header-menu-button-cont {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+}
+
+.header-menu-button {
+    position: relative;
+    width: 10px;
+    height: 20px;
+    background: url(assets/caret-up-solid.svg) no-repeat;
+    transform: rotate(90deg);
+    transition: all 1s ease;
+}
+
+.in-menu-list {
+    overflow: hidden;
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    left: 20px;
+    top: 20px;
+    z-index: 500;
+    transition: all 0.5s ease;
+}
+
+.show {
+    position: absolute;
+    top: -25px;
+    z-index: -5;
+    transition: all 0.5s ease;
+}
+
+.show-menu {
+    height: 120px;
+}
+
+.show-button {
+    transform: rotate(180deg);
+    height: 15px;
 }
 
 .menu-item {
     list-style: none;
+    transition: all 0.5s ease;
 }
 
 .task-bord {
     display: flex;
     flex-direction: column;
     width: 40%;
-    height: 85vh;
-    margin: 10px;
+    height: 100%;
+    margin-top: 2%;
     background: white;
     border-radius: 10px;
 }
@@ -90,13 +141,104 @@
 }
 
 .task-add-button {
-    margin-right: 4%;
+    background-color: #2e8ceb;
+    cursor: default;
+    padding: 0 14px;
+    float: right;
+    border: none;
+    text-shadow: 0 1px 0 rgb(0 0 0 / 8%);
+    box-shadow: none;
+    margin: 0 8px 0 0;
+    line-height: .875rem;
+    outline: none;
+    border-radius: 3px;
+    height: 32px;
+    position: relative;
+    text-align: center;
+    min-width: 70px;
+    vertical-align: middle;
+    white-space: nowrap;
+    box-sizing: border-box;
+    opacity: .4;
+}
+
+.task-add-button-active {
+    cursor: pointer;
+    opacity: 1;
+}
+
+.task-bord-body {
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.task-checkbox-container {
+    position: relative;
+    margin: 10px 0;
+    padding-left: 10px;
+    padding-bottom: 10px;
+    border-bottom: 0.5px rgba(128, 128, 128, 0.2392156863) solid;
+}
+
+.task-checkbox {
+    -webkit-appearance: none;
+    appearance: none;
+    position: absolute;
+    cursor: pointer;
+}
+
+.task-checkbox-text {
+    padding-left: 25px;
+    font-size: 1rem;
+    color: #444;
+    cursor: pointer;
+    position: relative;
+    margin-bottom: 1rem;
+}
+
+.task-checkbox-text:before {
+    content: "";
+    display: block;
+    width: 16px;
+    height: 16px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    border-radius: 3px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10000;
+    transition: background .1s linear, border .1s linear;
+}
+
+.task-checkbox-text:after {
+    content: "";
+    display: block;
+    width: 12px;
+    height: 12px;
+    background: url(https://htmlbase.ru/storage/app/media/checkbox/check.svg) no-repeat;
+    background-size: 12px 12px;
+    opacity: 0;
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    z-index: 20000;
+    transition: opacity .1s linear;
+}
+
+.task-checkbox:checked+.task-checkbox-text:before {
+    background-color: var(--var-menu);
+    border-color: var(--var-back-aqua);
+}
+
+.task-checkbox:checked+.task-checkbox-text:after {
+    opacity: 1;
 }
 
 .info-bord {
     width: 40%;
-    height: 85vh;
-    margin: 10px;
+    height: 100%;
+    margin-top: 2%;
     background: var(--var-info);
     border-radius: 10px;
 }
