--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -13,7 +13,10 @@
 .header-wrapper {
     display: flex;
     justify-content: space-between;
-    gap: 1%;
+    gap: 3%;
+    @media (max-width: 550px) {
+      flex-wrap: wrap;
+    }
 }
 
 .navigation {
