--- a/src/styles/_start.scss
+++ b/src/styles/_start.scss
@@ -7,6 +7,7 @@ body {
 }
 .main-section {
   overflow: hidden;
+
 }
 .btn {
     background-color: var(--var-links);
@@ -41,7 +42,12 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 95vh;
-}
+  & .main-section {
+    @media (max-width: 550px) {
+      align-items:flex-start;
+    }
+  }
+  }
 
 .start {
   position: relative;
