layout app-page

--- a/src/styles/_var.scss
+++ b/src/styles/_var.scss
@@ -9,6 +9,7 @@
     --var-black: #000;
     --var-menu: #d7e7f5;
     --var-info: #e4eef8;
+    --var-priority-none: #ccc;
     --var-font-big: 1.3rem;
     --var-font-middle: 1.2rem;
     --var-font-small: 0.9rem;
