--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -1,9 +1,11 @@
 .application-page .header-container {
-  background: var(--var-back-blue);
+    background: var(--var-back-blue);
 }
+
 .application-page .footer {
-  background: var(--var-back-blue);
+    background: var(--var-back-blue);
 }
+
 .application-page {
     margin: 0;
     padding: 0;
@@ -26,6 +28,7 @@
     justify-content: space-around;
     border-radius: 10px;
     height: 85vh;
+    position: relative;
 }
 
 .header-menu {
@@ -140,7 +143,9 @@
     margin-bottom: 10px;
 }
 
-.task-add-button {
+.task-add-button,
+.task-note-button-yes,
+.task-note-button-no {
     background-color: #2e8ceb;
     cursor: default;
     padding: 0 14px;
@@ -162,6 +167,13 @@
     opacity: .4;
 }
 
+.task-note-button-no {
+    background-color: #fbfbfa;
+    color: #444;
+    border: 1px solid #c7cacd;
+    opacity: 1;
+}
+
 .task-add-button-active {
     cursor: pointer;
     opacity: 1;
@@ -169,15 +181,27 @@
 
 .task-bord-body {
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
 }
 
 .task-checkbox-container {
+    display: flex;
+    flex-direction: row;
     position: relative;
     margin: 10px 0;
     padding-left: 10px;
     padding-bottom: 10px;
     border-bottom: 0.5px rgba(128, 128, 128, 0.2392156863) solid;
+}
+
+.task-priority-container {
+    background-color: var(--var-priority-none);
+    background-attachment: scroll;
+    width: 3px;
+    min-width: 3px;
+    height: 100%;
+    border-radius: 1px;
+    vertical-align: top;
 }
 
 .task-checkbox {
@@ -188,12 +212,11 @@
 }
 
 .task-checkbox-text {
-    padding-left: 25px;
+    padding-left: 40px;
     font-size: 1rem;
     color: #444;
     cursor: pointer;
     position: relative;
-    margin-bottom: 1rem;
 }
 
 .task-checkbox-text:before {
@@ -206,7 +229,7 @@
     border-radius: 3px;
     position: absolute;
     top: 0;
-    left: 0;
+    left: 15px;
     z-index: 10000;
     transition: background .1s linear, border .1s linear;
 }
@@ -221,7 +244,7 @@
     opacity: 0;
     position: absolute;
     top: 3px;
-    left: 3px;
+    left: 18px;
     z-index: 20000;
     transition: opacity .1s linear;
 }
@@ -241,6 +264,7 @@
     margin-top: 2%;
     background: var(--var-info);
     border-radius: 10px;
+    position: relative;
 }
 
 .task-title {
@@ -267,4 +291,99 @@
 
 .task-count-do {
     font-size: 14px;
+}
+
+.view-task-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    margin-top: 2%;
+    background: white;
+    border-radius: 10px;
+    position: absolute;
+    top: -1.5%;
+    left: 0px;
+    box-shadow: -2px 0 0 #d9d9d9;
+    transition: all 1s ease;
+}
+
+.hover-task-container {
+    position: absolute;
+    left: 1000px;
+}
+
+.view-task-container-close {
+    display: flex;
+    justify-content: end;
+    gap: 10px;
+    width: 95%;
+    padding: 5px;
+    flex-direction: row;
+    color: gray;
+    font-size: .875rem;
+    cursor: pointer;
+    outline: none;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.view-task-title {
+    height: 25px;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    margin: 10px 0;
+    padding-left: 10px;
+    padding-bottom: 10px;
+    border-bottom: 0.5px rgba(128, 128, 128, 0.2392156863) solid;
+}
+
+.view-task-time {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    color: #999;
+    min-width: 62px;
+    height: 17px;
+    border: 1px solid transparent;
+    padding: 1px 5px 15px 42px;
+    vertical-align: top;
+    border-bottom: 0.5px rgba(128, 128, 128, 0.2392156863) solid;
+}
+
+.task-note-title {
+    clear: left;
+    padding: 17px 0 2px 17px;
+    border-bottom: 0.5px rgba(128, 128, 128, 0.2392156863) solid;
+}
+
+.task-note-input-container {
+    border-bottom: 0.5px rgba(128, 128, 128, 0.2392156863) solid;
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+}
+
+.task-note-input-img {
+    width: 33px;
+    height: 33px;
+    background-image: url('/src/assets/note.png');
+}
+
+.task-note-input,
+.task-add-input {
+    border-color: #d0d3d6;
+    min-height: 19px;
+    padding: 5px 6px 6px;
+    cursor: text;
+    word-wrap: break-word;
+    border: 1px solid #d0d3d6;
+    border-radius: 3px;
+    outline: none;
+}
+
+.task-note-button-container {
+    padding: 10px;
 }
