--- a/src/pages/registration/registration.css
+++ b/src/pages/registration/registration.css
@@ -1,11 +1,19 @@
+@keyframes back {
+  0%   { background: #1729B0; }
+  20%  { background: #2E3884; }
+  40%  { background: #081472; }
+  60%  { background: #4B5CD7; }
+  80%  { background: #717DD7; }
+  100% { background: #0060bf; }
+}
 .registration {
     position: relative;
     min-height: 100vh;
-    /* background-color: black; */
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 20px;
+    animation: 10s infinite alternate back;
 }
 
 .container {
@@ -54,6 +62,7 @@
     align-items: center;
     padding: 40px;
     transition: 0.5s;
+    flex-direction: column;
 }
 
 .container .user .form-container form h2 {
@@ -81,10 +90,17 @@
     font-size: 14px;
     letter-spacing: 1px;
     font-weight: 300;
+    transition: all 0.5s;
 }
-
+.container .user .form-container form input:active,
+.container .user .form-container form input:focus,
+.container .user .form-container form input:hover {
+border: 1px solid var(--var-back-aqua);
+cursor: pointer;
+transition: all 0.5s;
+}
 .container .user .form-container form input[type="submit"] {
-    max-width: 100px;
+    max-width: 115px;
     background: rgb(7, 0, 86);
     color: #fff;
     font-weight: bolder;
@@ -162,16 +178,16 @@
     section .container {
       max-width: 400px;
     }
-  
+
     section .container .quote-container {
       display: none;
     }
-  
+
     section .container .user .form-container {
       width: 100%;
     }
   }
-  
+
   .sign-up-link {
     margin-left: 10px;
   }
@@ -185,3 +201,22 @@
     justify-content: center;
 
   }
+  @media (max-width: 400px) {
+    .quote-container {
+      display: none;
+    }
+  }
+
+.quote-author {
+  overflow: hidden;
+  white-space: nowrap;
+  margin: 0 auto;
+  letter-spacing: .10em;
+  animation:
+    typing 10s steps(40, end) infinite;
+}
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
