--- a/src/styles/_start.scss
+++ b/src/styles/_start.scss
@@ -83,6 +83,7 @@ body {
         width: 100%;
         height: 100%;
         animation: 5s infinite alternate slidein;
+        transition: all 0.2s;
 
     }
     &__btns {
