feat: add lang btns to app-page

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -88,7 +88,7 @@ a {
     border-radius: 6px;
     border: 1px solid #cccccc;
     outline: none;
-    margin-left: -450px;
+    margin-right: auto;
     &::before {
         content: '';
         width: 20px;
