--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,3 +1,6 @@
+.active-link {
+  color: var(--var-white);
+}
 .header_logo {
     width: 200px;
     height: 100px;
@@ -53,6 +56,7 @@ a {
 }
 
 .header__title {
+    font-size: 16px;
     margin-left: 100px;
     padding: 3%;
     color: var(--var-white);
