feat: added counter display for tasks

--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -362,6 +362,11 @@
     font-size: 22px;
     color: #0060bf;
 }
+.task-title-done {
+    font-size: 22px;
+    color: #0060bf;
+}
+
 
 .task-count-do {
     font-size: 14px;
